--- a/quickx1.html
+++ b/quickx1.html
@@ -282,94 +282,124 @@
                         </ul>
                     </div>
                 </div>
-                <div id="portf" class="sl-smal" data-bgcolor="#fff" data-humcolor="#000">
-                    <div data-scroll>
+
+                <div id="portf" class="grid_intern" data-bgcolor="#0E0F13" data-humcolor="#fff">
+                    <div class="margin-r-46" data-scroll>
+                        <div class="text_anim text-clor">
+                            <h2 data-scroll-target="#portf">
+                                <span>USER PERSONA </span>
+                            </h2>
+                        </div>
+                        <div class="text_anim text-clor">
+                            <p>
+                                <span>
+                                    Based on the user interviews and consolidated findings of our research, we got a
+                                    better perspective of users’ needs which helped us draw a clear roadmap to the
+                                    solution.
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="poster" class="blocco pd">
+                    <div class="bck">
+                        <img src="/assets/resources/img/quickx-elements/bg-elementss.png" alt="">
+                    </div>
+                    <div class="left_block flex" data-scroll>
+                        <figure>
+                            <img alt="" src="/assets/resources/img/quickx-elements/User-Persona-1.png">
+                        </figure>
+                        <figure class="mt-1">
+                            <img alt="" src="/assets/resources/img/quickx-elements/User-Persona-2.png">
+                        </figure>
+                    </div>
+                </div>
+                <div id="portf" class="grid_intern" data-bgcolor="#0E0F13" data-humcolor="#fff">
+                    <div class="margin-r-46" data-scroll>
+                        <div class="text_anim text-clor">
+                            <h2 data-scroll-target="#portf">
+                                <span>USER FLOW</span>
+                            </h2>
+                        </div>
+                        <div class="text_anim text-clor">
+                            <p>
+                                <span>
+                                    The user flow lays out the user’s movement, mapping out each and every step a user
+                                    takes from the entry point to the final interaction when using the product. This
+                                    helped us define how the app will function.
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="poster" class="blocco">
+                    <div class="left_block grid_intern" data-scroll>
+                        <figure>
+                            <img alt="" class="p-r-l" src="/assets/resources/img/quickx-elements/User-Flow.png">
+                        </figure>
+                    </div>
+                </div>
+                <div id="portf" class="grid_intern" data-bgcolor="#0E0F13" data-humcolor="#fff"
+                    style="position: relative;">
+
+                    <div class="margin-r-46" data-scroll>
+                        <div class="text_anim text-clor">
+                            <h2 data-scroll-target="#portf">
+                                <span>WIREFRAMES</span>
+                            </h2>
+                        </div>
+                        <div class="text_anim text-clor">
+                            <p>
+                                <span>
+                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
+                                    and costly. Let Patronum fully automate all the administrator and user tasks to
+                                    ensure an effective and secure process.
+                                </span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div id="poster" class="blocco">
+                    <div class="left_block grid_intern" data-scroll>
+                        <figure>
+                            <img alt="" class="p-r-l" src="/assets/resources/img/quickx-elements/Wireframes.png">
+                        </figure>
+                    </div>
+                </div>
+                <div id="portf" class="grid_intern" data-bgcolor="#fff" data-humcolor="#000"
+                    style="position: relative;">
+
+                    <div class="margin-r-46" data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
-                                <span>Apps
-                                    Screens </span>
+                                <span>VISUAL DESIGN</span>
                             </h2>
                         </div>
                         <div class="text_anim ">
                             <p>
                                 <span>
-                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
-                                    an
-                                    effective and secure process.
+                                    ONBOARDING SCREENS AND SIGN UP PROCESS
                                 </span>
                             </p>
                         </div>
                     </div>
                 </div>
-                <div id="poster" class="blocco">
-                    <div class="left_block grid_intern" data-scroll>
-                        <figure>
-                            <img alt="" class="p-r-l" src="/assets/resources/img/quickx-elements/color.png">
-                        </figure>
-                    </div>
-                </div>
-
-
-                <div id="poster" class="blocco">
-                    <div class="left_block grid_intern" data-scroll>
-                        <figure>
-                            <img alt="" src="/assets/resources/img/quickx-elements/design-bc.png">
-                        </figure>
-                    </div>
-                </div>
-                <div id="portf" class="sl-smal" data-bgcolor="#18294A" data-humcolor="#FFF">
-                    <div data-scroll>
-                        <div class="text_anim">
-                            <h2 data-scroll-target="#portf" data-textcolor="#fff" style="color: #ffffff;">
-                                <span>Welcome to the QuickX</span>
-                            </h2>
-                        </div>
-                        <div class="text_anim " style="color: #ffffff;">
-                            <p>
-                                <span>
-                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
-                                    an
-                                    effective and secure process.
-                                </span>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div id="poster" class="blocco">
-                    <div class="left_block grid_intern" data-scroll>
-                        <figure>
-                            <img alt="" src="/assets/resources/img/quickx-elements/mobile-1.png">
-                        </figure>
-                    </div>
-                </div>
-                <div class="image-section" data-scroll data-bgcolor="#18294A" data-humcolor="#fff">
-                    <div class="reveal img-right">
-                        <img src="/assets/resources/img/quickx-elements/Animate-1.png">
-                    </div>
-                    <div class="reveal img-left">
-                        <img src="/assets/resources/img/quickx-elements/Animate-2.png">
-                    </div>
-                </div>
-                <div class="module padding_on_top_velocities">
+                <div class="module padding_on_top_velocities" style="padding-top: 0;">
                     <div class="container-fluid">
                         <div class="row no-gutters justify-content-center">
                             <div class="col-6 margin_on_top_iota" data-scroll data-scroll-direction="vertical"
                                 data-scroll-speed="-1">
                                 <picture class="img-fluid box-parallax-2">
-                                    <img class=" lazyloaded" src="/assets/resources/img/quickx-elements/mobile-11.png">
+                                    <img class=" lazyloaded" src="/assets/resources/img/quickx-elements/mobile-1.png">
                                 </picture>
                                 <picture class="img-fluid box-parallax-3">
-                                    <img class=" lazyloaded" src="/assets/resources/img/quickx-elements/mobile-22.png">
+                                    <img class=" lazyloaded" src="/assets/resources/img/quickx-elements/mobile-2.png">
                                 </picture>
                             </div>
 
                             <div class="col-4" data-scroll data-scroll-direction="vertical" data-scroll-speed="1">
                                 <picture class="img-fluid">
-                                    <img class=" lazyloaded" src="/assets/resources/img/quickx-elements/mobile-33.png">
+                                    <img class=" lazyloaded" src="/assets/resources/img/quickx-elements/mobile-3.png">
                                 </picture>
                             </div>
                         </div>
@@ -379,17 +409,13 @@
                     <div class="margin-r-46" data-scroll>
                         <div class="text_anim">
                             <h2 data-scroll-target="#portf">
-                                <span>Icons </span>
+                                <span>OTHER SCREENS </span>
                             </h2>
                         </div>
                         <div class="text_anim ">
                             <p>
                                 <span>
-                                    Provisioning and deprovisioning users within Google Workspace can be time-consuming
-                                    and
-                                    costly. Let Patronum fully automate all the administrator and user tasks to ensure
-                                    an
-                                    effective and secure process.
+                                    QuickX is a digital payment solution designed to modernize the billing and payment.
                                 </span>
                             </p>
                         </div>
@@ -398,7 +424,23 @@
                 <div id="poster" class="blocco">
                     <div class="left_block grid_intern" data-scroll>
                         <figure>
-                            <img alt="" src="/assets/resources/img/quickx-elements/Icons.png">
+                            <img alt="" src="/assets/resources/img/quickx-elements/dark-screens.png">
+                        </figure>
+                    </div>
+                </div>
+                <div id="portf" class="grid_intern" data-scroll data-bgcolor="#0E0F13" data-humcolor="#fff">
+                    <div class="margin-r-46" data-scroll>
+                        <div class="text_anim">
+                            <h2 data-scroll-target="#portf">
+                                <span>LIGHT SCREENS</span>
+                            </h2>
+                        </div>
+                    </div>
+                </div>
+                <div id="poster" class="blocco">
+                    <div class="left_block grid_intern" data-scroll>
+                        <figure>
+                            <img alt="" src="/assets/resources/img/quickx-elements/light-screens.png">
                         </figure>
                     </div>
                 </div>
