--- a/blogs.html
+++ b/blogs.html
@@ -40,7 +40,7 @@
 
             <div class="site-branding">
 
-                <div class="site-logo logo">
+                <div class="site-logo">
                     <a href="index.html">
                         <img alt="Site Logo" class="dark-logo" src="/assets/resources/img/enigma-en-logo.svg">
                         <!-- <img alt="Site Logo Light" class="light-logo" src="/assets/resources/img/enigma-en-logo.svg"> -->
