--- a/quickx1.html
+++ b/quickx1.html
@@ -431,7 +431,7 @@
                 <div id="portf" class="grid_intern" data-scroll data-bgcolor="#0E0F13" data-humcolor="#fff">
                     <div class="margin-r-46" data-scroll>
                         <div class="text_anim">
-                            <h2 data-scroll-target="#portf">
+                            <h2 data-scroll-target="#portf" style="color: #fff;">
                                 <span>LIGHT SCREENS</span>
                             </h2>
                         </div>
@@ -583,7 +583,6 @@
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="assets/resources/js/page.js"></script>
     <script src="assets/resources/js/others.js"></script>
 
