--- a/blogs.html
+++ b/blogs.html
@@ -184,21 +184,15 @@
                             <li data-cat="Marketing">Marketing</li>
                             <!--/Work Category-->
                             <!--Work Category-->
-                            <li id="cl"><a href='#search'>Search </a></li>
+                            <li><a class="cl">Search </a></li>
                             <!--/Work Category-->
                         </ul>
 
                     </div>
                     <!--/Work Categories-->
+
                 </div>
-                <!-- overlay !-->
-                <div id="search" class="fade">
-                    <a href="#" class="close-btn" id="close-search">
-                        x
-                    </a>
-                    <input placeholder="type here to search" id="searchbox" type="search" />
-                </div>
-                <!--- /overlay -->
+
                 <section class="recent-post" data-humcolor="#000">
                     <div class="container">
                         <div class="pr-list">
@@ -556,7 +550,12 @@
             </footer>
         </div>
         </div>
-
+        <!-- overlay !-->
+        <div id="search" class="fade">
+            <a class="close-btn cl" id="close-search">x</a>
+            <input placeholder="type here to search" id="searchbox" type="search" />
+        </div>
+        <!--- /overlay -->
     </main>
 
     <div class="action-icon play-icon" id="cursor-stick-area" data-magnetic data-cursor="-opaque">
