--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
                                             <!--/Project Image-->
 
                                             <!--Project Title-->
-                                            <div class="ar-work-title c-speed-block_title" data-scroll="">Pdtl
+                                            <div class="ar-work-title c-speed-block_title" data-scroll="">PDTL
                                             </div>
                                             <!--/Project Title-->
 
@@ -1154,7 +1154,7 @@
                                             <div class="port o-image" data-scroll>
                                                 <a href="#">
                                                     <img src="/assets/resources/img/pdtl-mobile-work.png">
-                                                    <h2><span>08</span>Pdtl</h2>
+                                                    <h2><span>08</span>PDTL</h2>
                                                 </a>
                                             </div>
                                         </div>
