--- a/works.html
+++ b/works.html
@@ -245,7 +245,7 @@
                                             </div>
                                             <div class="cs-title">
                                                 <a href="project-6.html" data-cursor-text="View"
-                                                    data-cursor=" -color-pdtl">Pdtl</a>
+                                                    data-cursor=" -color-pdtl">PDTL</a>
                                             </div>
                                         </a>
 
@@ -368,7 +368,7 @@
                             data-parallax-strength=".1">
 
                             <div class="single-image">
-                                <img alt="Single Image" src="/assets/resources/img/work-kedar.png">
+                                <img alt="Single Image" src="/assets/resources/img/work-imagee.png">
                             </div>
 
                         </div>
@@ -382,10 +382,13 @@
 
                             <div class="text-wrapper">
                                 <h3 class="has-anim" data-stagger="0.05" data-duration="1.5" data-animation="linesUp">
-                                    As a patch of light concept of the number one Euclid explorations preserve and
-                                    cherish that pale blue dot rogue. Vanquish the impossible a very small stage in a
-                                    vast cosmic arena made in the interiors of collapsing stars intelligent beings from
-                                    which we spring finite but unbounded.
+                                    with our bespoke solutions and proven processes, we elevate brands to captivate
+                                    their
+                                    audiences.
+                                    For the last 4 years, we have developed user-focused sustainable & scalable digital
+                                    solutions for our brand partners and in the process became India's top digital
+                                    experience design agency. Our expertise encompasses the realms of strategic
+                                    consulting, digital design, UX/UI, development, user testing, social media, and SEO.
                                 </h3>
                             </div>
 
@@ -396,33 +399,34 @@
 
                     <div class="wrappers">
                         <div class="c-col-4"></div>
-                        <div class="c-col-4">
+                        <div class="c-col-4 flex-mob">
 
                             <div data-delay="0" class="a-number-counter light">
-                                <div class="ac-number">17</div>
+                                <div class="ac-number">15</div>
                                 <span class="ac-sign">+</span>
-                                <div class="ac-title">Galaxies</div>
+                                <div class="ac-title">Global Clients</div>
 
                             </div>
                             <span class="a-empty-space" style="height: 70px"></span>
                             <div data-delay="0" class="a-number-counter light">
-                                <div class="ac-number">73</div>
+                                <div class="ac-number">3</div>
                                 <span class="ac-sign"></span>
-                                <div class="ac-title">Known Planets</div>
+                                <div class="ac-title">Countries</div>
                             </div>
                         </div>
 
-                        <div class="c-col-4">
+                        <div class="c-col-4 flex-mob">
                             <div data-delay="0" class="a-number-counter light">
-                                <div class="ac-number">157</div>
-                                <span class="ac-sign"></span>
-                                <div class="ac-title">Black holes</div>
+                                <div class="ac-number">150</div>
+                                <span class="ac-sign">+</span>
+                                <div class="ac-title">
+                                    Projects Delivered</div>
                             </div>
                             <span class="a-empty-space" style="height: 70px"></span>
                             <div data-delay="0" class="a-number-counter light">
-                                <div class="ac-number">350</div>
-                                <span class="ac-sign">+</span>
-                                <div class="ac-title">Stars</div>
+                                <div class="ac-number">17</div>
+                                <span class="ac-sign"></span>
+                                <div class="ac-title">Enigmatics</div>
                             </div>
                         </div>
                         <span class="a-empty-space" style="height: 100px"></span>
