--- a/contact.html
+++ b/contact.html
@@ -180,6 +180,25 @@
                         </li>
                      </ul>
                   </div>
+                  <div class="contact-left-img" data-scroll>
+                     <ul class="say-hello-details">
+                        <li class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
+                           <h6>Email</h6>
+                           <p><a href="mailto:hi@weareenigma.com">hi@weareenigma.com</a></p>
+                        </li>
+                        <li class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
+                           <h6>Office</h6>
+                           <p>Suite 301, Grandslam I-Thum,
+                              <br> Sector - 62,
+                              Noida,<br> Uttar Pradesh, IN 201301
+                           </p>
+                        </li>
+                        <li class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
+                           <h6>Phone</h6>
+                           <p><a href="tel:+91 8178 026 136">+91 8178 026 136</a></p>
+                        </li>
+                     </ul>
+                  </div>
                   <div class="contact-right" id="contact-form-right-side" data-scroll>
                      <div class="welcome-heading d-flex justify-content-sb align-items-start">
                         <h1 data-scroll class="title-animation"> <span>Tell Us About </span>
