--- a/about.html
+++ b/about.html
@@ -31,6 +31,24 @@
         <div class="apl-count"></div>
 
     </div>
+    <!-- <div class="init-load">
+        <div id="noise2"></div>
+        <div class="inner align-b">
+            <div class="counter c-first">
+                <div class="count">
+                </div>
+            </div>
+            <div class=" counter c-second">
+                <div class="count">
+                </div>
+            </div>
+            <div class="counter c-third">
+                <div class="count">
+                </div>
+            </div>
+            <span class="percentage load-text" style="position: relative;">preparing your experience... </span>
+        </div>
+    </div> -->
     <div class="site-header">
         <div class="header-wrapper">
 
