--- a/contact.html
+++ b/contact.html
@@ -180,7 +180,7 @@
                         </li>
                      </ul>
                   </div>
-                  <div class="contact-left-img" data-scroll>
+                  <div class="contact-left-img w-hde" data-scroll>
                      <ul class="say-hello-details">
                         <li class="opacity-0" data-scroll="" data-scroll-delay="0.10" data-scroll-offset="130">
                            <h6>Email</h6>
