--- a/index.html
+++ b/index.html
@@ -1174,10 +1174,10 @@
                 <footer id="footer">
                     <div class="f-container">
                         <div class="top-f" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
-                            <h3>Let’s Build Something </h3>
+                            <h3>Let’s Create Something </h3>
                             <div class="ctaa" data-cursor="-exclusion -lg" data-cursor-stick="#cursor-stick-area">
                                 <a href="contact.html" class="great-cta" href="" id="cursor-stick-area">
-                                    Great Together
+                                    Magical Together
                                     <div class="arow">
                                         <img src="/assets/resources/img/get-arrow.svg" />
                                     </div>
@@ -1271,9 +1271,9 @@
         <div class="container">
             <div class="en-request-form">
                 <div class="form-h">
-                    <h2 class="frm">FOR A STEP
+                    <h2 class="frm">Magic
                     </h2>
-                    <h2 class="s-fr frm">BEFORE THE START
+                    <h2 class="s-fr frm">Begins Here!
                     </h2>
                 </div>
                 <form class="en-form" action="/api/feedback/" method="post" enctype="multipart/form-data">
