--- a/services.html
+++ b/services.html
@@ -328,7 +328,7 @@
                             </span></h2>
                     </div>
                     <div class="container " data-scroll="">
-                        <div class="approach-lis">
+                        <div class="approach-lis" data-scroll>
                             <div class="flex-con text_anim">
                                 <div class="ap-no">
                                     <h6><span class="numb">
